// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`continue argument 0 1`] = `
Program {
  "children": Array [
    Continue {
      "kind": "continue",
      "level": Number {
        "kind": "number",
        "value": "0",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`continue argument 1 1`] = `
Program {
  "children": Array [
    Continue {
      "kind": "continue",
      "level": Number {
        "kind": "number",
        "value": "1",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`continue argument 2 1`] = `
Program {
  "children": Array [
    Continue {
      "kind": "continue",
      "level": Number {
        "kind": "number",
        "value": "2",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`continue simple 1`] = `
Program {
  "children": Array [
    Continue {
      "kind": "continue",
      "level": null,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
